adding tick demos

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ singleStepOfGameLoop();
 				<img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
 				<ul>
 					<li>Slowdown - no delta</li>
-					<ul><li><a href="../demos/basics/tick-nodelta.html">check it out!</a></li></ul>
+					<ul><li><a href="./demos/tick-nodelta/">check it out!</a></li></ul>
 					<li>Slowdown - now with delta tracking!</li>
-					<ul><li><a href="../demos/basics/tick-delta.html">check it out!</a></li></ul>
+					<ul><li><a href="./demos/tick-delta/">check it out!</a></li></ul>
 				</ul>
 			</section>
 
