Object pools with demos

--- a/index.html
+++ b/index.html
@@ -1,101 +1,101 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-		<title>HackTheNorth - HTML5 GameDev</title>
+    <title>HackTheNorth - HTML5 GameDev</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+    <meta name="author" content="Hakim El Hattab">
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-		<link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/reveal.min.css">
+    <link rel="stylesheet" href="css/theme/default.css" id="theme">
+    <link rel="stylesheet" href="css/custom.css">
 
-		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+    <!-- For syntax highlighting -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
-		<script>
-			if( window.location.search.match( /print-pdf/gi ) ) {
-				var link = document.createElement( 'link' );
-				link.rel = 'stylesheet';
-				link.type = 'text/css';
-				link.href = 'css/print/pdf.css';
-				document.getElementsByTagName( 'head' )[0].appendChild( link );
-			}
-		</script>
+    <!-- If the query includes 'print-pdf', include the PDF print sheet -->
+    <script>
+      if( window.location.search.match( /print-pdf/gi ) ) {
+        var link = document.createElement( 'link' );
+        link.rel = 'stylesheet';
+        link.type = 'text/css';
+        link.href = 'css/print/pdf.css';
+        document.getElementsByTagName( 'head' )[0].appendChild( link );
+      }
+    </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
+    <!--[if lt IE 9]>
+    <script src="lib/js/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-	<body>
+  <body>
 
-		<div class="reveal">
+    <div class="reveal">
 
-			<div class="slides">
-			<section>
-				<h3>Michael Henretty</h3>
-				<img class="bullet" src="./img/pic.jpg" />
-				<ul>
-					<li>Mozilla, <a href="https://www.mozilla.org/en-US/firefox/os/">Firefox OS</a></li>
-					<li>Game Closure, <a href="http://docs.gameclosure.com/">Devkit</a></li>
-					<li><a href="https://twitter.com/mikehenrty">Twitter: @mikehenrty</a></li>
-					<li><a href="https://github.com/mikehenrty">Github: mikehenrty</a></li>
-				</ul>
-			</section>
+      <div class="slides">
+      <section>
+        <h3>Michael Henretty</h3>
+        <img class="bullet" src="./img/pic.jpg" />
+        <ul>
+          <li>Mozilla, <a href="https://www.mozilla.org/en-US/firefox/os/">Firefox OS</a></li>
+          <li>Game Closure, <a href="http://docs.gameclosure.com/">Devkit</a></li>
+          <li><a href="https://twitter.com/mikehenrty">Twitter: @mikehenrty</a></li>
+          <li><a href="https://github.com/mikehenrty">Github: mikehenrty</a></li>
+        </ul>
+      </section>
 
-			<section>
-				<h3>HTML5 Game Development, for GNUbs</h3>
-				<img class="bullet" src="./img/syllabus.gif" />
-				<ul>
-					<li>We will cover:</li>
-					<li><ul><li>Game Loops, Object Pools</li></ul></li>
-					<li><ul><li>Basic Physics, Collision Detection</li></ul></li>
-					<li><ul><li>Resource Loading, Performance</li></ul></li>
-					<li>We WON'T cover:</li>
-					<li><ul><li>Making a website</li></ul></li>
-					<li><ul><li>Javascript programming</li></ul></li>
-					<li><ul><li>Animation, Deployment, Monetization</li></ul></li>
-				</ul>
-			</section>
+      <section>
+        <h3>HTML5 Game Development, for GNUbs</h3>
+        <img class="bullet" src="./img/syllabus.gif" />
+        <ul>
+          <li>We will cover:</li>
+          <li><ul><li>Game Loops, Object Pools</li></ul></li>
+          <li><ul><li>Basic Physics, Collision Detection</li></ul></li>
+          <li><ul><li>Resource Loading, Performance</li></ul></li>
+          <li>We WON'T cover:</li>
+          <li><ul><li>Making a website</li></ul></li>
+          <li><ul><li>Javascript programming</li></ul></li>
+          <li><ul><li>Animation, Deployment, Monetization</li></ul></li>
+        </ul>
+      </section>
 
-			<section>
-				<h2>The Goals</h2>
-				<img class="bullet" src="./img/Sonic_the_Hedgehog2.png" />
-				<ul style="list-style-type: disc;">
-					<li>Learn GameDev Building Blocks</li>
-					<li>Turn WebDev into GameDev</li>
-					<li>Understand performance basics</li>
-					<li>Such inspire, games WOW</li>
-					<li>&nbsp;&nbsp;&nbsp;&nbsp;WOW</li>
-				</ul>
-			</section>
+      <section>
+        <h2>The Goals</h2>
+        <img class="bullet" src="./img/Sonic_the_Hedgehog2.png" />
+        <ul style="list-style-type: disc;">
+          <li>Learn GameDev Building Blocks</li>
+          <li>Turn WebDev into GameDev</li>
+          <li>Understand performance basics</li>
+          <li>Such inspire, games WOW</li>
+          <li>&nbsp;&nbsp;&nbsp;&nbsp;WOW</li>
+        </ul>
+      </section>
 
-			<section>
-				<h2>Game Loop</h2>
-				<img style="border-radius: 100px; position: relative; left: -60px" class="bullet" src="../img/time-travel.jpg" />
-				<ul>
-					<li>Engine room of your game</li>
-					<li>Iterative as fast as possible</li>
-					<li>2 Parts for each: </li>
-					<ul><li>Ticking - updating game state</li></ul>
-					<ul><li>Drawing - display game state to screen</li></ul>
-					<li>In HTML5, we use requestAnimationFrame</li>
-				</ul>
-			</section>
+      <section>
+        <h2>Game Loop</h2>
+        <img style="border-radius: 100px; position: relative; left: -60px" class="bullet" src="../img/time-travel.jpg" />
+        <ul>
+          <li>Engine room of your game</li>
+          <li>Iterative as fast as possible</li>
+          <li>2 Parts for each: </li>
+          <ul><li>Ticking - updating game state</li></ul>
+          <ul><li>Drawing - display game state to screen</li></ul>
+          <li>In HTML5, we use requestAnimationFrame</li>
+        </ul>
+      </section>
 
-			<section>
-				<h2>Game Loop - cont.</h2>
-				<pre><code>
+      <section>
+        <h2>Game Loop - cont.</h2>
+        <pre><code>
 
 function singleStepOfGameLoop() {
   updateGameState();
@@ -106,24 +106,24 @@ function singleStepOfGameLoop() {
 // kick us off
 singleStepOfGameLoop();
 
-				</code></pre>
-			</section>
+        </code></pre>
+      </section>
 
-			<section>
-				<h2>Game Loop - cont.</h2>
-				<img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
-				<ul>
-					<li>Question: </li>
-					<ul><li>what happens when things slow down?</li></ul>
-					<ul><li>are you tracking time???</li></ul>
-				<ul>
-				</ul>
-			</section>
+      <section>
+        <h2>Game Loop - cont.</h2>
+        <img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
+        <ul>
+          <li>Question: </li>
+          <ul><li>what happens when things slow down?</li></ul>
+          <ul><li>are you tracking time???</li></ul>
+        <ul>
+        </ul>
+      </section>
 
 
-			<section>
-				<h2>Game Loop - cont.</h2>
-				<pre><code>
+      <section>
+        <h2>Game Loop - cont.</h2>
+        <pre><code>
 function singleStepOfGameLoop() {
   var delta = getMsSinceLastUpdate()
   while (delta > 16) {
@@ -136,67 +136,155 @@ function singleStepOfGameLoop() {
 
 // kick us off
 singleStepOfGameLoop();
-				</code></pre>
-			</section>
+        </code></pre>
+      </section>
 
 
-			<section>
-				<h2>Game Loop - cont.</h2>
-				<img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
-				<ul>
-					<li>Slowdown - no delta</li>
-					<ul><li><a href="./demos/tick-nodelta/index.html">check it out!</a></li></ul>
-					<ul><li><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/tick-nodelta">Code</a></li></ul>
-					<li>Slowdown - now with delta tracking!</li>
-					<ul><li><a href="./demos/tick-delta/index.html">check it out!</a></li></ul>
-					<ul><li><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/tick-delta">Code</a></li></ul>
-				</ul>
-			</section>
+      <section>
+        <h2>Game Loop - cont.</h2>
+        <img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
+        <ul>
+          <li>Slowdown - no delta</li>
+          <ul><li><a href="./demos/tick-nodelta/index.html">check it out!</a></li></ul>
+          <ul><li><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/tick-nodelta">Code</a></li></ul>
+          <li>Slowdown - now with delta tracking!</li>
+          <ul><li><a href="./demos/tick-delta/index.html">check it out!</a></li></ul>
+          <ul><li><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/tick-delta">Code</a></li></ul>
+        </ul>
+      </section>
+
+
+      <section>
+        <h1>Questions?</h1>
+        <img style="border:none; box-shadow:none; max-width: 200px; background: none"  src="./img/HTML5Question2_2.png" />
+      </section>
 
 
 
+      <section>
+        <h2>Object Pools</h2>
+        <img style="border-radius: 10px;" class="bullet-image" src="../img/crowded-pool.jpg" />
+        <ul>
+          <li>Allocating memory in JavaScript is easy</li>
+          <ul><li>deallocating is even easier</li></ul>
+          <li>but... GARBAGE COLLECTION!</li>
+          <ul><li>no control over when</li></ul>
+          <ul><li>worst enemy, causes jank</li></ul>
+          <li>For example, particles</li>
+          <ul><li>lots of little moving objects</li></ul>
+        </ul>
+      </section>
 
-			<section>
-				<h3>Title</h3>
-				<img class="bullet" src="./img/syllabus.gif" />
-				<ul>
-					<li>Point</li>
-				</ul>
-			</section>
 
-			</div>
-		</div>
+      <section>
+        <h2>Without Object Pools</h2>
+        <pre><code>
+function emitParticle(x, y) {
+  var p = new Particle();
+  p.x = x;
+  p.y = y;
+  p.animate();
+}
+        </code></pre>
+      </section>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
 
-		<script>
+    <section>
+      <h2>With Object Pools</h2>
+      <pre><code>
+funtion ParticlePool() {
+  this.particles = [];
+  for (var i = 0; i < 100; i++) {
+    particles[i] = new Particle();
+  }
+}
 
-			// Full list of configuration options available here:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+ParticlePool.prototype.get = function() {
+  return this.particles.pop();
+}
 
-				theme: Reveal.getQueryHash().theme || 'night', // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+ParticlePool.prototype.release = function(particle) {
+  this.particles.push(particle);
+}
 
-				// Parallax scrolling
-				 //parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
-				 //parallaxBackgroundSize: '2100px 900px',
+      </code></pre>
+    </section>
 
-				// Optional libraries used to extend on reveal.js
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
-				]
-			});
 
-		</script>
+    <section>
+      <h2>With Object Pools cont.</h2>
+      <pre><code>
+function emitParticle(pool, x, y) {
+  var p = pool.get();
+  p.x = x;
+  p.y = y;
+  p.animate();
+  // return so we can release it later
+  return p;
+}
 
-	</body>
+// then sometime later
+function onParticleComplete(pool, particle) {
+  pool.release(particle);
+}
+        </code></pre>
+      </section>
+
+
+      <section>
+        <h2>Object Pool</h2>
+        <img class="bullet-image" src="./img/garbage.png" />
+        <ul>
+          <li>Particles, no pool</li>
+          <ul><li><a href="./demos/nopools/index.html">check it out!</a></li></ul>
+          <li>Particles, now with added pooling!</li>
+          <ul><li><a href="./demos/pools/index.html">check it out!</a></li></ul>
+        </ul>
+      </section>
+
+
+
+      <section>
+        <h3>Title</h3>
+        <img class="bullet" src="./img/syllabus.gif" />
+        <ul>
+          <li>Point</li>
+        </ul>
+      </section>
+
+      </div>
+    </div>
+
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.min.js"></script>
+
+    <script>
+
+      // Full list of configuration options available here:
+      // https://github.com/hakimel/reveal.js#configuration
+      Reveal.initialize({
+        controls: true,
+        progress: true,
+        history: true,
+        center: true,
+
+        theme: Reveal.getQueryHash().theme || 'night', // available themes are in /css/theme
+        transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+
+        // Parallax scrolling
+         //parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+         //parallaxBackgroundSize: '2100px 900px',
+
+        // Optional libraries used to extend on reveal.js
+        dependencies: [
+          { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+          { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+          { src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+          { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+        ]
+      });
+
+    </script>
+
+  </body>
 </html>
