fixing missing images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <section>
         <h2>Game Loop</h2>
-        <img style="border-radius: 100px; position: relative; left: -60px" class="bullet" src="../img/time-travel.jpg" />
+        <img style="border-radius: 100px; position: relative; left: -60px" class="bullet" src="./img/time-travel.jpg" />
         <ul>
           <li>Engine room of your game</li>
           <li>Iterative as fast as possible</li>
@@ -111,7 +111,7 @@ singleStepOfGameLoop();
 
       <section>
         <h2>Game Loop - cont.</h2>
-        <img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
+        <img class="bullet-image" src="./img/how-to-avoid-traffic-jams-35319_2.jpg" />
         <ul>
           <li>Question: </li>
           <ul><li>what happens when things slow down?</li></ul>
@@ -142,7 +142,7 @@ singleStepOfGameLoop();
 
       <section>
         <h2>Game Loop - cont.</h2>
-        <img class="bullet-image" src="../img/how-to-avoid-traffic-jams-35319_2.jpg" />
+        <img class="bullet-image" src="./img/how-to-avoid-traffic-jams-35319_2.jpg" />
         <ul>
           <li>Slowdown - no delta</li>
           <ul><li><a href="./demos/tick-nodelta/index.html">check it out!</a></li></ul>
@@ -163,7 +163,7 @@ singleStepOfGameLoop();
 
       <section>
         <h2>Object Pools</h2>
-        <img style="border-radius: 10px;" class="bullet-image" src="../img/crowded-pool.jpg" />
+        <img style="border-radius: 10px;" class="bullet-image" src="./img/crowded-pool.jpg" />
         <ul>
           <li>Allocating memory in JavaScript is easy</li>
           <ul><li>deallocating is even easier</li></ul>
