Adding collision and demo

--- a/index.html
+++ b/index.html
@@ -259,9 +259,24 @@ function onParticleComplete(pool, particle) {
           <li>But how??</li>
           <ul><li>use MATHS silly</li></ul>
           <p><a href="./demos/physics/index.html">Let's see MATHS</a></p>
-          <p><a href="./demos/physics/index.html">Code</a></p>
+          <p><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/physics">Code</a></p>
         </ul>
       </section>
+
+
+      <section>
+        <h2>Collision Detection</h2>
+        <img class="bullet-image" src="./img/stock-footage-businessman-on-phone-to-insurance-company-whilst-inspecting-damage-to-car-in-accident-shot-on-canon.png" />
+        <ul>
+          <li>Ojects have to interact realistically</li>
+          <li>But how??</li>
+          <ul><li>use MATHS dummy</li></ul>
+          <p><a href="../demos/collision/index.html">Let's see MATHS</a></p>
+          <p><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/collision">Code</a></p>
+          <li>Fix it for FREE STUFF!!</li>
+        </ul>
+      </section>
+
 
 
 
