fixing up about me slide

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <ul>
           <li>Mozilla, <a href="https://www.mozilla.org/en-US/firefox/os/">Firefox OS</a></li>
           <li>Game Closure, <a href="http://docs.gameclosure.com/">Devkit</a></li>
-          <li><a href="https://twitter.com/mikehenrty">Twitter: @mikehenrty</a></li>
-          <li><a href="https://github.com/mikehenrty">Github: mikehenrty</a></li>
+          <li style="margin-top: 30px">Twitter: <a href="https://twitter.com/mikehenrty">@mikehenrty</a></li>
+          <li>Github: <a href="https://github.com/mikehenrty">mikehenrty</a></li>
+          <li style="margin-top: 30px">Slides: <a href="http://j.mp/hackthenorth-gamedev">j.mp/hackthenorth-gamedev</a></li>
         </ul>
       </section>
 
