crappy and flappy demos for performance

--- a/index.html
+++ b/index.html
@@ -354,17 +354,56 @@ function loadImages() {
         </section>
 
 
-
-
+      <section>
+        <h1>Questions?</h1>
+        <img style="border:none; box-shadow:none; max-width: 200px; background: none"  src="./img/HTML5Question2_2.png" />
+      </section>
 
 
       <section>
-        <h3>Title</h3>
-        <img class="bullet" src="./img/syllabus.gif" />
+        <h2>Performance</h2>
+        <img class="bullet-image" src="./img/race-car.svg" />
         <ul>
-          <li>Point</li>
+          <li>What makes a good game <i>Good</i>?</li>
+          <ul><li>Beautiful Artwork</li></ul>
+          <ul><li>Great Music</li></ul>
+          <ul><li>Compelling Story</li></ul>
+          <ul><li><b>GRAPHICS!!!</b></li></ul>
         </ul>
       </section>
+
+
+      <section>
+        <h2>Graphics</h2>
+        <img class="bullet-image" src="./img/Mario.gif" />
+        <ul>
+          <li>Resolution &amp; Framerate</li>
+          <ul><li>Movies are 24 fps</li></ul>
+          <ul><li>Games should aim for 60 fps</li></ul>
+          <li>Higher framerate = smoother, more fun</li>
+          <li>Which would you rather play?</li>
+          <p><a href="./demos/crappy/index.html">Low Framerate</a></p>
+          <p><a href="./demos/flappy/index.html">High Framerate</a></p>
+        </ul>
+      </section>
+
+
+
+        <section>
+          <h2>Moral of the Story</h2>
+          <ul>
+            <li>Don't do a lot of work in the tick</li>
+            <ul><li>60fps -&gt; 16ms per tick</li></ul>
+            <ul><li>tick fast!</li></ul>
+            <ul><li>Profiler can help</li></ul>
+          </ul>
+        </section>
+
+      <section>
+        <h1>The end?</h1>
+        <img style="border:none; box-shadow:none; max-width: 200px; background: none"  src="./img/HTML5Question2_2.png" />
+      </section>
+
 
       </div>
     </div>
