--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ function onParticleComplete(pool, particle) {
           <li>Ojects have to interact realistically</li>
           <li>But how??</li>
           <ul><li>use MATHS dummy</li></ul>
-          <p><a href="../demos/collision/index.html">Let's see MATHS</a></p>
+          <p><a href="./demos/collision/index.html">Let's see MATHS</a></p>
           <p><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/collision">Code</a></p>
           <li>Fix it for FREE STUFF!!</li>
         </ul>
