--- a/index.html
+++ b/index.html
@@ -382,8 +382,11 @@ function loadImages() {
           <ul><li>Games should aim for 60 fps</li></ul>
           <li>Higher framerate = smoother, more fun</li>
           <li>Which would you rather play?</li>
-          <p><a href="./demos/crappy/index.html">Low Framerate</a></p>
-          <p><a href="./demos/flappy/index.html">High Framerate</a></p>
+          <ul><li><p><a href="./demos/crappy/index.html">Low Framerate</a></p></li></ul>
+          <ul><p><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/crappy">Code</a></p></ul>
+          <ul><li><p><a href="./demos/flappy/index.html">High Framerate</a></p></li></ul>
+          <ul><p><a href="https://github.com/mikehenrty/hackthenorth-slides/tree/master/demos/flappy">Code</a></p></ul>
+        </section>
         </ul>
       </section>
 
